# cyberwave-hackaton

./: README.md  pyproject.toml
src/cyberwave_hackaton/: main.py
src/cyberwave_hackaton/detection/: annotate.py  collection.py  fine_tuning.py  fonts.py  inference.py  inference_live.py  pc.py  test.py
src/cyberwave_hackaton/detection/Dataset/: data.yaml  labels.cache
src/cyberwave_hackaton/detection/Dataset/labels/: frame_20260620_140826_884967.txt  frame_20260620_140830_220539.txt  frame_20260620_140837_192192.txt  frame_20260620_140845_431522.txt  frame_20260620_140850_668558.txt  frame_20260620_140853_839186.txt  frame_20260620_140900_709327.txt  frame_20260620_140906_113255.txt  frame_20260620_140913_651408.txt  frame_20260620_140915_653575.txt  frame_20260620_140917_522038.txt  frame_20260620_140919_355844.txt  frame_20260620_140921_924699.txt  frame_20260620_140925_794186.txt  frame_20260620_140932_298979.txt  frame_20260620_140942_873322.txt  frame_20260620_140949_344480.txt  frame_20260620_140957_984536.txt  frame_20260620_141000_886234.txt  frame_20260620_141004_155499.txt  frame_20260620_141009_726109.txt  frame_20260620_141012_061179.txt  frame_20260620_141014_829559.txt  frame_20260620_141021_401098.txt  frame_20260620_141024_870262.txt
src/cyberwave_hackaton/detection/Model/cube_hackaton/train/: args.yaml  (+1 more)
src/cyberwave_hackaton/locomotion/: camera_check.py  locom.py  tutorial.py
src/cyberwave_hackaton/manipulation/: feedback.py  get_pose.py  main.py  motion.py  planning.py
src/cyberwave_hackaton/manipulation/models/: piper_description.urdf
