[project]
name = "cyberwave-hackaton"
version = "0.1.0"
description = ""
authors = [
    {name = "Pucciland95",email = "niccolo.lucci@mosaico.dev"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "cyberwave (==0.4.9)",
    "pyroboplan (>=1.3.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "cyberwave_hackaton", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
